--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,25 @@
     transform: rotate(360deg);
   }
 }
+
+
+.cellStyle {
+  width: 40px;
+  height: 40px; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  font-size: 25px;
+  font-weight: 800;
+}
+
+.restartBtn {
+  background-color: aquamarine;
+  width: 100px;
+  height: 50px;
+  border-radius: 15px;
+  border: none;
+  font-size: 20px;
+  cursor: pointer;
+}
