--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,30 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+#root {
+  display: flex;
+  justify-content: center;
+  background-color: blanchedalmond;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  width: 800px;
+  height: 100vh;
+  text-align: center;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.App-link {
-  color: #61dafb;
+.app__title {
+  font-size: 40px;
+  margin-bottom: 40px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 
 .cellStyle {
   width: 40px;
@@ -49,12 +37,8 @@
   font-weight: 800;
 }
 
-.restartBtn {
-  background-color: aquamarine;
-  width: 100px;
-  height: 50px;
-  border-radius: 15px;
-  border: none;
-  font-size: 20px;
-  cursor: pointer;
+.nonMinesCount {
+  font-size: 30px;
+  margin-bottom: 30px;
+  
 }
