--- a/src/App.css
+++ b/src/App.css
@@ -4,26 +4,37 @@
   box-sizing: border-box;
 }
 
-#root {
+body {
   display: flex;
   justify-content: center;
+  align-items: center;
+  /* height: 100vh; */
+  flex-direction: column;
   background-color: blanchedalmond;
 }
 
-.App {
+#root {
+  padding: 50px;
+  /* display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  flex-direction: column;
+  background-color: blanchedalmond; */
+}
+
+.App {  
+  padding: 0 30px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  width: 800px;
-  height: 100vh;
   text-align: center;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .app__title {
   font-size: 40px;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
 }
 
 .cellStyle {
@@ -40,5 +51,26 @@
 .nonMinesCount {
   font-size: 30px;
   margin-bottom: 30px;
-  
+}
+
+.nav__title {
+  margin-bottom: 30px;
+}
+
+.nav__list {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  align-items: center;
+  list-style: none;
+}
+
+.nav__item:active,
+.nav__item:hover,  
+.nav__item {
+  text-decoration: none;
+  color: #666;
+  border: 2px solid green;
+  padding: 10px;
+  border-radius: 15px;
 }
